// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should match snapshot hidden 1`] = `
<DocumentFragment>
  

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.01em;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: #FFFFFF;
  background: #2953B2;
  padding: 0.5rem 0.75rem;
  height: 2.25rem;
}

.emotion-3:hover {
  color: #FFFFFF;
  background: #20408C;
}

.emotion-3:active {
  color: #FFFFFF;
  background: #172F66;
}

.emotion-3:disabled {
  background: #E6E6E6;
  color: #747474;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.0625rem #F1F4FC,0rem 0rem 0rem 0.1875rem #96B2F2;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.01em;
  visibility: visible;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-1 svg {
  margin-left: 0.125rem;
}

.emotion-0 {
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.emotion-13 {
  outline: none;
  z-index: 999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: coral;
  padding: 0.75rem;
  min-width: 18px;
  border: 1px solid #DDDDDD;
  border-radius: 3px;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
}

.emotion-5 {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.01em;
  border: none;
  text-transform: initial;
  width: 100%;
  height: 32px;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background: transparent;
  color: #2953B2;
}

.emotion-5 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5 svg {
  margin: 0.25rem;
  width: 20px;
  height: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-5:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.0625rem #F1F4FC,0rem 0rem 0rem 0.1875rem #96B2F2;
}

.emotion-5:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-5:hover {
  color: #20408C;
  background: #F1F4FC;
}

.emotion-5:active {
  color: #172F66;
  background: #DDE5F7;
}

.emotion-5:disabled {
  color: #747474;
  background: #E6E6E6;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-bottom: 1px solid #DDDDDD;
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

<div
    class="emotion-14"
  >
    <button
      aria-controls="id"
      aria-expanded="false"
      aria-haspopup="menu"
      class="emotion-3"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <svg
            class="emotion-0"
            fill="currentColor"
            height="1rem"
            viewBox="0 0 256 256"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="16rem"
              width="16rem"
            />
            <polyline
              fill="none"
              points="208 96 128 176 48 96"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="18"
            />
          </svg>
          Open
        </div>
      </div>
    </button>
    <div
      aria-label="menu label"
      aria-orientation="vertical"
      class="emotion-13"
      data-dialog="true"
      data-testid="menu"
      hidden=""
      id="id"
      role="menu"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <button
        class="emotion-5"
        id="id-1"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Download
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-2"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Link to
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-3"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Favorite
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        class="emotion-10"
        role="separator"
      />
      <button
        class="emotion-5"
        id="id-4"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Delete
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu should match snapshot visible 1`] = `
<DocumentFragment>
  

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.01em;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: #FFFFFF;
  background: #2953B2;
  padding: 0.5rem 0.75rem;
  height: 2.25rem;
}

.emotion-3:hover {
  color: #FFFFFF;
  background: #20408C;
}

.emotion-3:active {
  color: #FFFFFF;
  background: #172F66;
}

.emotion-3:disabled {
  background: #E6E6E6;
  color: #747474;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.0625rem #F1F4FC,0rem 0rem 0rem 0.1875rem #96B2F2;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.01em;
  visibility: visible;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-1 svg {
  margin-left: 0.125rem;
}

.emotion-0 {
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
}

.emotion-5 {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.01em;
  border: none;
  text-transform: initial;
  width: 100%;
  height: 32px;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background: transparent;
  color: #2953B2;
}

.emotion-5 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5 svg {
  margin: 0.25rem;
  width: 20px;
  height: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-5:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.0625rem #F1F4FC,0rem 0rem 0rem 0.1875rem #96B2F2;
}

.emotion-5:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-5:hover {
  color: #20408C;
  background: #F1F4FC;
}

.emotion-5:active {
  color: #172F66;
  background: #DDE5F7;
}

.emotion-5:disabled {
  color: #747474;
  background: #E6E6E6;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-bottom: 1px solid #DDDDDD;
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

.emotion-13 {
  outline: none;
  z-index: 999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #FFFFFF;
  padding: 0.75rem;
  min-width: 18px;
  border: 1px solid #DDDDDD;
  border-radius: 3px;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
}

<div
    class="emotion-14"
  >
    <button
      aria-controls="id"
      aria-expanded="true"
      aria-haspopup="menu"
      class="emotion-3"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <svg
            class="emotion-0"
            fill="currentColor"
            height="1rem"
            viewBox="0 0 256 256"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="16rem"
              width="16rem"
            />
            <polyline
              fill="none"
              points="208 96 128 176 48 96"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="18"
            />
          </svg>
          Open
        </div>
      </div>
    </button>
    <div
      aria-label="menu label"
      aria-orientation="vertical"
      class="emotion-13"
      data-dialog="true"
      data-testid="menu"
      id="id"
      role="menu"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <button
        class="emotion-5"
        id="id-1"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Download
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-2"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Link to
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-3"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Favorite
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        class="emotion-10"
        role="separator"
      />
      <button
        class="emotion-5"
        id="id-4"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Delete
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
